# mockserver

./: AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml  integration.sh  test-config.toml  test-spec.json
src/: app.rs  config.rs  lib.rs  main.rs
src/spec/: compiler.rs  matcher.rs  mod.rs  models.rs  store.rs
tests/: spec_tests.rs
