[package]
name = "mockserver"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "signal", "time", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
anyhow = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }

[[test]]
name = "spec_tests"
path = "tests/spec_tests.rs"
